Refactored project layout slightly

--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -5,6 +5,6 @@
 
     <fragment
         android:id="@+id/feedFragment"
-        android:name="com.alexvanyo.sportsfeed.FeedFragment"
+        android:name="com.alexvanyo.sportsfeed.ui.FeedFragment"
         android:label="FeedFragment" />
 </navigation>
