--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main.xml"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main.xml"
     app:startDestination="@id/feedFragment">
 
     <fragment
         android:id="@+id/feedFragment"
         android:name="com.alexvanyo.sportsfeed.ui.FeedFragment"
-        android:label="FeedFragment" >
+        android:label="@string/app_name"
+        tools:layout="@layout/feed_fragment">
         <action
             android:id="@+id/action_feedFragment_to_competitionFragment"
             app:destination="@id/competitionFragment"
@@ -18,5 +21,6 @@
     <fragment
         android:id="@+id/competitionFragment"
         android:name="com.alexvanyo.sportsfeed.ui.CompetitionFragment"
-        android:label="CompetitionFragment" />
+        android:label="@string/app_name"
+        tools:layout="@layout/competition_fragment" />
 </navigation>
