--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="slideDuration">200</integer>
+    <integer name="pollingPeriodSeconds">10</integer>
 </resources>
