--- a/app/src/main/res/layout/competition_fragment.xml
+++ b/app/src/main/res/layout/competition_fragment.xml
@@ -31,7 +31,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:gravity="start"
-            android:text="@{competition.competitors[1].team.shortDisplayName}"
+            android:text="@{competition.leftTeam.team.shortDisplayName}"
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/centerGuideline"
             app:layout_constraintStart_toStartOf="@+id/leftLogo"
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
             android:gravity="center"
-            android:text="@{competition.competitors[1].score}"
+            android:text="@{competition.leftTeam.score}"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintBottom_toBottomOf="@+id/leftLogo"
             app:layout_constraintEnd_toStartOf="@+id/divider"
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:gravity="center"
-            android:text="@{competition.competitors[0].score}"
+            android:text="@{competition.rightTeam.score}"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintBottom_toBottomOf="@+id/divider"
             app:layout_constraintStart_toEndOf="@+id/divider"
@@ -80,7 +80,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:gravity="end"
-            android:text="@{competition.competitors[0].team.shortDisplayName}"
+            android:text="@{competition.rightTeam.team.shortDisplayName}"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@+id/rightLogo"
             app:layout_constraintStart_toStartOf="@+id/centerGuideline"
