--- a/app/src/main/res/layout/competition_item.xml
+++ b/app/src/main/res/layout/competition_item.xml
@@ -33,7 +33,7 @@
             android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@{competition.competitors[1].team.abbreviation}"
+            android:text="@{competition.leftTeam.team.abbreviation}"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/leftLogo"
             app:layout_constraintStart_toEndOf="@+id/leftLogo"
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
             android:gravity="center"
-            android:text="@{competition.competitors[1].score}"
+            android:text="@{competition.leftTeam.score}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintBottom_toBottomOf="@+id/divider"
             app:layout_constraintEnd_toStartOf="@+id/divider"
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:gravity="center"
-            android:text="@{competition.competitors[0].score}"
+            android:text="@{competition.rightTeam.score}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintBottom_toBottomOf="@+id/divider"
             app:layout_constraintStart_toEndOf="@+id/divider"
@@ -82,7 +82,7 @@
             android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@{competition.competitors[0].team.abbreviation}"
+            android:text="@{competition.rightTeam.team.abbreviation}"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/rightLogo"
             app:layout_constraintEnd_toStartOf="@+id/rightLogo"
