--- a/app/src/main/res/layout/baseball_box_score.xml
+++ b/app/src/main/res/layout/baseball_box_score.xml
@@ -16,7 +16,11 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingTop="8dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="8dp">
 
         <Space
             android:id="@+id/space"
