--- a/app/src/main/res/layout/statistic_item.xml
+++ b/app/src/main/res/layout/statistic_item.xml
@@ -13,6 +13,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="4dp">
